--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -60,6 +60,25 @@ hgroup{
 	color: #555;
 }
 
+colorpicker {
+    position: fixed;
+    background-color: rgba(255, 255, 255, 0.7);
+    width: 45px;
+    height: 70px;
+    top: 50%;
+    left: 0;
+    margin: -80px 0 0 0;
+    padding: 10px;
+    box-shadow: 0 0 3px rgba(100, 100, 100, 0.1), 0 3px 1px #D4D4D4;
+    color: #555;
+}
+
+colorpicker .color {
+    display: inline-block;
+    width: 15px;
+    height: 15px;
+}
+
 h1{
 	font-size: 22px;
 	padding-bottom: 8px;
